force-app/main/default/objects/cdcpc__RD_HPricingHolder_CompPricing__c/cdcpc__RD_HPricingHolder_CompPricing__c.object-meta.xml
<CustomObject>
    <label>RDP HPricingHolderCompPricing</label>
    <nameField>
        <label>RDP HPricingHolderCompPricing</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDP HPricingHolderCompPricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>