force-app/main/default/objects/cdcpc__RD_HPricingHolder_CompPricing__c/fields/cdcpc__Class__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Class__c</fullName>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>