force-app/main/default/objects/cdcpc__RD_HPricingHolder_CompPricing__c/fields/cdcpc__Qty_LL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Qty_LL__c</fullName>
    <label>Qty LL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>