force-app/main/default/objects/cdcpc__RD_HPricingHolder_CompPricing__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Prod__c</columns>
    <columns>cdcpc__Part__c</columns>
    <columns>cdcpc__Size__c</columns>
    <columns>cdcpc__Class__c</columns>
    <columns>cdcpc__PartMatl__c</columns>
    <columns>cdcpc__Qty_LL__c</columns>
    <columns>cdcpc__Qty_UL__c</columns>
    <columns>cdcpc__ListPrice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__CDC_Ext_ID__c</field>
        <operation>equals</operation>
        <value>3647,5279,6971</value>
    </filters>
    <label>All</label>
</ListView>